# rdchiral_plus

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
.windsurf/rules/: docstring.md
benchmarks/: index.html
consistency/: index.html
contributing/: index.html
docs/: benchmarks.md  consistency.md  contributing.md  index.md  reference.md
examples/: example_notebook.ipynb
rdchiral/: __init__.py  bonds.py  chiral.py  clean.py  initialization.py  main.py  template_extractor.py  utils.py
reference/: index.html
scripts/: analyze_consistency.py  run_speed_benchmark_envs.py  speed_benchmark_script.py  uspto_top_1k_templates.txt
search/: search_index.json
stylesheets/: extra.css
templates/: Examine templates.ipynb  clean_and_extract_uspto.py
tests/: test_atom_mapping.py  test_rdchiral.py
tests/integration/: test_extraction.py  test_extraction_cases.json  test_rdchiral.py
tests/unit/: test_bonds.py  test_chiral.py  test_clean.py  test_initialization.py  test_main.py  test_utils.py
