[build-system]
requires = ["setuptools>=45", "wheel", "mypy>=1.14,<2", "rdkit", "numpy"]
build-backend = "setuptools.build_meta"
 
[project]
name = "rdchiral_plus"
version = "0.2.0"
description = "Wrapper for RDKit's RunReactants to improve stereochemistry handling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit",
]
authors = [
    {name = "Connor Coley", email = "ccoley@mit.edu"},
    {name = "Carson Britt", email = "carson.s.britt@gmail.com"}
]
maintainers = [
    {name = "Carson Britt", email = "carson.s.britt@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/denovochem/rdchiral_plus/"
Repository = "https://github.com/denovochem/rdchiral_plus/"
Issues = "https://github.com/denovochem/rdchiral_plus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdchiral*"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux_* *-win32 *_i686"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.environment]
RDCHIRAL_USE_MYPYC = "1"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "pandas>=2.3.3",
    "pytest>=8.3.5",
    "rdcanon>=0.1.2",
    "ruff>=0.15.6",
]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rdkit.*"
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "slow: integration/performance-style tests",
]
